group IMB forms

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -70,7 +70,7 @@ imbemr.app.userApp.add=Add App Definition
 imbemr.app.userApp.edit=Edit App Definition
 imbemr.app.userApp.save.success=Successfully saved {0}
 imbemr.app.userApp.save.fail=Failed to save {0}
-
+imbemr.app.imbForms.label=IMB Forms
 
 #========== ERROR MESSAGES =========
 imbemr.error.login.fail=Invalid username/password. Please try again.
