override login page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,1 +1,11 @@
 imbemr.title=IMB EMR Module
+imbemr.login.title=IMB EMR - Login
+imbemr.login.username=Username
+imbemr.login.password=Password
+imbemr.login.username.placeholder=Username
+imbemr.login.password.placeholder=Password
+imbemr.login.loginHeading=Login
+imbemr.login.sessionLocation=Location
+imbemr.login.button=Login
+imbemr.login.cannotLogin =Can not login
+imbemr.registration=Patient Registration
