--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -9,3 +9,5 @@ imbemr.login.sessionLocation=Location
 imbemr.login.button=Login
 imbemr.login.cannotLogin =Can not login
 imbemr.registration=Patient Registration
+
+imbemr.home.currentUser= Home page
